# TimeSeries

./: .coveragerc  .gitignore  .test_persistentdb_client_log  .test_rest_api_server_log  .test_rest_api_web_log  .test_tsdb_client_log  .travis.yml  AUTHORS.rst  LICENSE.txt  README.rst  go_client.py  go_persistent_server.py  go_server.py  go_web.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt
docs/: Makefile  Web_service_demo.ipynb  conf.py  index.rst  vptree_demo.ipynb
files/testing/: blarg.idx  db_metadata.met  metaheap  order.idx  pks.p  tsheap  vp.idx
local_coverage_report/: local_coverage_report
persistent_files/testing/: blarg.idx  db_metadata.met  mean.idx  metadata_heap  metaheap  metaheap_metadata.met  order.idx  (+6 more)
procs/: Untitled.ipynb  _corr.py  corr.py  darray.py  double.i  double_wrap.c  fft.cpp  fft.h  fft.i  fft.py  fft_wrap.c  interface.i  interface.py  interface_wrap.c  interface_wrap.cpp  junk.py  setup.py  stats.py
pype/: __init__.py  ast.py  fgir.py  lexer.py  lib_import.py  optimize.py  parser.out  parser.py  parsetab.py  pcode.py  pipeline.py  semantic_analysis.py  skeleton.py  symtab.py  translate.py
test/: .test_persistentdb_client_log  .test_rest_api_server_log  .test_rest_api_web_log  .test_tsdb_client_log  __init__.py  conftest.py  test_TimeSeries.py  test_dictdb.py  test_fgir.py  test_index.py  test_lazy.py  test_optimize.py  test_p.py  test_persistent_server.py  test_persistentdb.py  test_pipeline.py  test_rest_api.py  test_tsdb_client.py  test_tsdb_ops.py  test_tsdb_server.py  test_vptree.py  test_vptree_text.py  test_web_application.py  test_web_for_coverage.py
tests/: conftest.py  test_TimeSeries.py  test_lexer.py  test_pipeline.py  test_skeleton.py  travis_install.sh
timeseries/: TimeSeries.py  __init__.py  lazy.py  skeleton.py
tsdb/: dictdb.py  persistentdb.py  saved.py  test_dictDB.py  test_tsdb_client.py  tsdb_client.py  tsdb_constants.py  tsdb_error.py  tsdb_ops.py  tsdb_persistent.py  tsdb_serialization.py  tsdb_server.py  utils_heapfile.py  utils_indices.py
vp_tree/: README.md  VPTREE_DEMO.ipynb  simple_vp.py  vp_search.py  vp_searchtxt.py
web/: .test_rest_api_server_log  .test_rest_api_web_log  test_rest_api.py  test_web_application.py  web_application.py  web_for_coverage.py
(+9 files in other folders)
